--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_BasicInformation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_BasicInformation.cshtml
@@ -201,10 +201,10 @@
 
                 query.then((data) => {
                     if (data) {
-                        if (data.resultSet.result[0].v1) {
+                        if (data.Body.resultSet.result[0].v1) {
                             //公開說明書
                             $doc.removeClass('u-hidden');
-                            $doc.find('a')[0].setAttribute('href', data.resultSet.result[0].v1);
+                            $doc.find('a')[0].setAttribute('href', data.Body.resultSet.result[0].v1);
                         } else {
                             $doc.addClass('u-hidden');
                             $doc.find('a')[0].setAttribute('href', '');
@@ -228,10 +228,10 @@
 
                 query.then((data) => {
                     if (data) {
-                        if (data.resultSet.result[0].v1) {
+                        if (data.Body.resultSet.result[0].v1) {
                             //公開說明書
                             $doc.removeClass('u-hidden');
-                            $doc.find('a')[0].setAttribute('href', data.resultSet.result[0].v1);
+                            $doc.find('a')[0].setAttribute('href', data.Body.resultSet.result[0].v1);
                         } else {
                             $doc.addClass('u-hidden');
                             $doc.find('a')[0].setAttribute('href', '');
@@ -255,10 +255,10 @@
 
                 query.then((data) => {
                     if (data) {
-                        if (data.resultSet.result[0].v1) {
+                        if (data.Body.resultSet.result[0].v1) {
                             //公開說明書
                             $doc.removeClass('u-hidden');
-                            $doc.find('a')[0].setAttribute('href', data.resultSet.result[0].v1);
+                            $doc.find('a')[0].setAttribute('href', data.Body.resultSet.result[0].v1);
                         } else {
                             $doc.addClass('u-hidden');
                             $doc.find('a')[0].setAttribute('href', '');
@@ -282,10 +282,10 @@
 
                 query.then((data) => {
                     if (data) {
-                        if (data.resultSet.result[0].v1) {
+                        if (data.Body.resultSet.result[0].v1) {
                             //公開說明書
                             $doc.removeClass('u-hidden');
-                            $doc.find('a')[0].setAttribute('href', data.resultSet.result[0].v1);
+                            $doc.find('a')[0].setAttribute('href', data.Body.resultSet.result[0].v1);
                         } else {
                             $doc.addClass('u-hidden');
                             $doc.find('a')[0].setAttribute('href', '');
