--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_TechnicalAnalysis.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_TechnicalAnalysis.cshtml
@@ -153,7 +153,7 @@
                             let ohlc = [],
                                 volume = [];
 
-                            let mapData = data.resultSet.result.result.data.item.map((item, index) => {
+                            let mapData = data.Body.resultSet.result.result.data.item.map((item, index) => {
                                 return {
                                     close: Number(item.C),
                                     date: dateStringToDate(item.D).getTime(),
