Fix: 優惠標籤顯示

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
@@ -317,7 +317,7 @@
 													<div class="l-target__name">
 														<a href="@Model.ETFDetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2">@item.ProductCode @item.ProductName</a>
 													</div>
-													@if (ETFDiscountTags != null)
+													@if (item.ETFDiscountTags != null)
 													{
 														if (item.ETFDiscountTags.Length > 0)
 														{
