--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRankReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRankReturnView.cshtml
@@ -16,7 +16,7 @@
 						<div class="l-target__name">
 							<a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
 						</div>
-						@if (ETFDiscountTags != null)
+						@if (item.ETFDiscountTags != null)
 						{
 							if (item.ETFDiscountTags.Length > 0)
 							{
