--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
@@ -9,7 +9,7 @@
         return;
     }
     var etfData = Model.BasicEtf as EtfDetail;
-    string pageId = @Sitecore.Context.Item.ID.ToString();
+    string pageId = Sitecore.Context.Item.ID.ToString();
 }
 
 <div class="l-mainstage">
@@ -156,7 +156,10 @@
                 <!-- 若為外連，不要賦予[data-tab-target]屬性 -->
                 <li><a href="#" class="c-tab__item is-active" target="_self" title="ETF概況" data-tab-target="tab-1">ETF概況</a></li>
                 <li><a href="#" class="c-tab__item" target="_self" title="績效/淨值" data-tab-target="tab-2">績效/淨值</a></li>
-                <li><a href="#" class="c-tab__item" target="_self" title="歷史買賣價" data-tab-target="tab-3">歷史買賣價</a></li>
+                @if (Model.RegionType != RegionType.Overseas)
+                {
+                    <li><a href="#" class="c-tab__item" target="_self" title="歷史買賣價" data-tab-target="tab-3">歷史買賣價</a></li>
+                }
                 <li><a href="#" class="c-tab__item" target="_self" title="技術分析" data-tab-target="tab-4">技術分析</a></li>
                 <li><a href="#" class="c-tab__item" target="_self" title="基本資料" data-tab-target="tab-5">基本資料</a></li>
                 <li><a href="#" class="c-tab__item" target="_self" title="持股狀況" data-tab-target="tab-6">持股狀況</a></li>
@@ -169,7 +172,10 @@
                 <div class="c-tab__dropdown">
                     <a href="#" class="c-tab__clone is-active" target="_self" title="ETF概況" data-tab-target="tab-1">ETF概況</a>
                     <a href="#" class="c-tab__clone" target="_self" title="績效/淨值" data-tab-target="tab-2">績效/淨值</a>
-                    <a href="#" class="c-tab__clone" target="_self" title="歷史買賣價" data-tab-target="tab-3">歷史買賣價</a>
+                    @if (Model.RegionType != RegionType.Overseas)
+                    {
+                        <a href="#" class="c-tab__clone" target="_self" title="歷史買賣價" data-tab-target="tab-3">歷史買賣價</a>
+                    }
                     <a href="#" class="c-tab__clone" target="_self" title="技術分析" data-tab-target="tab-4">技術分析</a>
                     <a href="#" class="c-tab__clone" target="_self" title="基本資料" data-tab-target="tab-5">基本資料</a>
                     <a href="#" class="c-tab__clone" target="_self" title="持股狀況" data-tab-target="tab-6">持股狀況</a>
@@ -183,7 +189,10 @@
         <!-- is-active: 作用中的項目 -->
         @Html.Partial("/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml", Model)
         @Html.Partial("/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml", Model)
-        @Html.Partial("/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml", Model)
+        @if (Model.RegionType != RegionType.Overseas)
+        {
+            @Html.Partial("/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml", Model)
+        }
         @Html.Partial("/Views/Feature/Wealth/Component/ETFDetail/_TechnicalAnalysis.cshtml", Model)
         @Html.Partial("/Views/Feature/Wealth/Component/ETFDetail/_BasicInformation.cshtml", Model)
         @Html.Partial("/Views/Feature/Wealth/Component/ETFDetail/_Shareholding.cshtml", Model)
